--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./media.css" media="(min-width:900px)">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@300;400;500;600&family=Open+Sans&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Testimonials section | Marilena Sanchez</title>
 
@@ -76,3 +80,4 @@
  
 </body>
 </html>
+
