Terminado el styling, añadido el quote de fondo, falta alinearlo correctamente

--- a/index.html
+++ b/index.html
@@ -16,12 +16,21 @@
 <body>
   <main class="page--container">
 
+    <section class="quotes">
+      <span></span>
+    </section>
+
 <section class="daniel--container"> 
+
+  
 <div class="profile">
-  <span class="quote-backdrop"></span>
+  
   <span class="profile--pic"></span>
-  <h2>Daniel Clifford</h2>
+  <div class="profile--name">
+    <h2>Daniel Clifford</h2>
   <h3>Verified Graduate</h3>
+</div>
+
 </div>
 <div class="testimony">
   <h1>I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</h1>
@@ -32,8 +41,10 @@
 <section class="jonathan--container">
   <div class="profile">
     <span class="profile--pic"></span>
+    <div class="profile--name">
     <h2>Jonathan Walters</h2>
     <h3>Verified Graduate</h3>
+  </div>
   </div>
   <div class="testimony">
     <h1>The team was very supportive and kept me motivated</h1>
@@ -44,8 +55,10 @@
 <section class="jeanette--container">
   <div class="profile">
     <span class="profile--pic"></span>
+    <div class="profile--name">
     <h2>Jeanette Harmon</h2>
     <h3>Verified Graduate</h3>
+  </div>
   </div>
   <div class="testimony">
     <h1>An overall wonderful and rewarding experience</h1>
@@ -56,8 +69,10 @@
 <section class="patrick--container">
   <div class="profile">
     <span class="profile--pic"></span>
+    <div class="profile--name">
     <h2>Patrick Abrams</h2>
     <h3>Verified Graduate</h3>
+  </div>
   </div>
   <div class="testimony">
     <h1>Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.</h1>
@@ -68,8 +83,10 @@
 <section class="kira--container">
   <div class="profile">
     <span class="profile--pic"></span>
+    <div class="profile--name">
     <h2>Kira Whittle</h2>
     <h3>Verified Graduate</h3>
+  </div>
   </div>
   <div class="testimony">
     <h1>Such a life-changing experience. Highly recommended!</h1>
