Terminado el responsive. Solo dos líneas de código. Uau

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./media.css" media="(min-width:900px)">
+  <link rel="stylesheet" href="./media.css" media="(max-width:1024px)">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,9 +16,9 @@
 <body>
   <main class="page--container">
 
-    <section class="quotes">
+   <!--- <section class="quotes">
       <span></span>
-    </section>
+    </section> -->
 
 <section class="daniel--container"> 
 
